packages/social-media-app/frontend/src/index.css
html,
body {
    height: 100%;
}

body {
    margin: 0;
    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
        sans-serif; */
    font-family: math;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
        monospace;
}

/* prevent dragging rects with iframe to loose mouse events to the iframe */
.react-draggable-transparent-selection iframe {
    pointer-events: none !important;
}

/* prevent resizing rects with iframe to loose mouse events to the iframe */
.resizing.react-resizable iframe {
    pointer-events: none !important;
}

@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind variants;

/*
@layer base {
    input {
        @apply font-sans,
        /
        dark: text-white;
        @apply bg-netrual-50,
        bg-neutral-950;

    }


}*/

@layer base {
    input {
        @apply text-black;
        @apply dark:text-white;
        @apply bg-white;
        @apply dark:bg-black;
    }

    body {
        @apply text-neutral-950;
        @apply dark:text-neutral-50;
        @apply bg-neutral-50;
        @apply dark:bg-neutral-950;
    }

    span {
        @apply text-neutral-950;
        @apply dark:text-neutral-50;
    }

    /* Base styling for headers */
    h1,
    h2,
    h3,
    h4,
    h5 {
        line-height: 1.2;
        margin: 0.5em 0;
        margin-block-start: 0.67em;
        margin-block-end: 0.67em;
        margin-inline-start: 0px;
        margin-inline-end: 0px;
        font-weight: bold;
        unicode-bidi: isolate;
    }

    /* Individual header styles */
    h1 {
        font-size: 2.5rem;
        font-weight: 700;
        margin-bottom: 0.6em;
    }

    h2 {
        font-size: 2rem;
        font-weight: 600;
        margin-bottom: 0.5em;
    }

    h3 {
        font-size: 1.75rem;
        font-weight: 500;
        margin-bottom: 0.5em;
    }

    h4 {
        font-size: 1.5rem;
        font-weight: 500;
        margin-bottom: 0.5em;
    }

    h5 {
        font-size: 1.25rem;
        font-weight: 400;
        margin-bottom: 0.4em;
    }

    hr {
        /* Remove default border */
        height: 1px;
        /* Set the thickness */
        margin: 2rem 0;
        /* Vertical spacing to separate sections */
    }

    hr.faded {
        border: 0;
        height: 1px;
        background-image: linear-gradient(
            to right,
            rgba(0, 0, 0, 0),
            rgba(0, 0, 0, 0.75),
            rgba(0, 0, 0, 0)
        );
    }

    /* scrollbar color */
    ::-webkit-scrollbar {
        background: var(--mono-shade3);
    }

    ::-webkit-scrollbar-thumb {
        background: #888;
    }
}

@layer components {
    .comic-font {
        font-family: "Comic Neue", cursive;
    }

    .icon {
        @apply text-neutral-950;
        @apply dark:text-neutral-50;
    }

    .btn {
        @apply py-2 px-4 rounded;
    }

    .btn-icon {
        @apply text-neutral-800;
        @apply dark:text-neutral-200;
    }

    .btn:hover {
        @apply bg-primary-200;
        @apply dark:bg-primary-400;
    }

    .btn:active {
        @apply bg-primary-400;
        @apply dark:bg-primary-600;
    }

    .btn-icon:hover {
        @apply bg-primary-200;
        @apply dark:bg-primary-400;
    }

    .btn-icon:active {
        @apply bg-primary-400 !important;
        @apply dark:bg-primary-600 !important;
    }

    .btn-icon {
        @apply py-2 px-2 rounded-md;
    }

    .btn-toggle {
        box-shadow: 0 4px #999;
        outline: none;
        @apply border-[1px] border-neutral-600 dark:border-neutral-400 border-solid;
    }

    .btn-toggle[data-state="on"] {
        @apply bg-primary-400;
        @apply dark:bg-primary-600;
        box-shadow: 0 1px #666 !important;
        transform: translateY(4px) !important;
    }

    .btn-toggle:focus {
        /*  box-shadow: 0 0 0 2px black; */
        outline: none;
    }

    .btn-elevated {
        outline: none;
        box-shadow: 0 4px #999;
        @apply border-[1px] border-neutral-600 dark:border-neutral-400 border-solid;
    }

    .btn-elevated:active {
        box-shadow: 0 1px #666 !important;
        transform: translateY(4px) !important;
    }

    .btn-icon-sx > * {
        @apply w-4 h-4;
    }

    .btn-icon-md > * {
        @apply w-6 h-6;
    }

    .btn-icon-lg > * {
        @apply w-6 h-6;
    }

    .btn-icon-lg > * {
        @apply w-8 h-8;
    }

    .content-container {
        height: calc(100vh - 60px);
    }

    .menu-item {
        @apply flex items-center w-full p-2;

        /*  @apply py-2 px-4; */
        @apply text-neutral-800;
        @apply dark:text-neutral-200;
        @apply hover:bg-primary-200;
        @apply dark:hover:bg-primary-400;
        cursor: pointer;
    }

    .menu-item:hover {
        @apply bg-primary-200;
        @apply dark:bg-primary-400;
    }

    .menu-item:active {
        @apply bg-primary-400;
        @apply dark:bg-primary-600;
    }

    .menu-item:focus {
        @apply bg-primary-200;
        @apply dark:bg-primary-400;
    }

    .menu-item[data-disabled] {
        @apply text-neutral-400;
        @apply dark:text-neutral-600;
        @apply cursor-not-allowed;
    }

    .outline-auto {
        outline: auto;
    }
}

.react-grid-placeholder {
    @apply bg-secondary-400 !important;
}

